O_O um monte de coisa

--- a/src/sub-templates/footer.html
+++ b/src/sub-templates/footer.html
@@ -271,4 +271,4 @@ $(".chat-flutuante").addChat();
 	<!-- Chat -->
 <script src="//validator.ebit.com.br?ebitId=16797&amp;typeTag=selo&amp;urlOrigin=http%3A%2F%2Fwww.cobasi.com.br%2F"></script>
 <script type="text/javascript" id="getSelo" src="https://imgs.ebit.com.br/ebitBR/selo-ebit/js/getSelo.js?16797"></script>
-<script type="text/javascript" src="/arquivos/main.js"></script>
+<script type="text/javascript" src="/arquivos/main.min.js"></script>
